--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-player": "^2.10.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
